name:                packet-simulator
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matthiasgoergens/packet-simulator#readme
license:             BSD3
license-file:        LICENSE
author:              Matthias Goergens
maintainer:          matthias.goergens@gmail.com
copyright:           GPL2 by default.  Ask author for exceptions.
category:            experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , stm
                     , privileged-concurrency
                     , MonadRandom
  default-language:    Haskell2010

executable packet-simulator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , packet-simulator
  default-language:    Haskell2010

test-suite packet-simulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , packet-simulator
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthiasgoergens/packet-simulator
